WP-8716 Fixed the profile image alignment for the right rail

--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -384,9 +384,11 @@
           div
             line-height: 1.5
         .background-rail-img
-          margin-left: 36%
+          margin-left: 100px
           margin-top: -75px
           position: absolute
+          +breakpoint($bp-for-phone-only)
+            margin-left: 35%
           img
             border: 1px solid $voices-divider
             border-radius: 50%
